*Add option to the Bags Module to change the sort orientation. This can be set to BOTTOM-TOP or TOP-BOTTOM  (Credit: Caliburnus)
*Add option to the Bags Module to change the xOffset of both the bags and bank frame.
*Add option to the Bags Module to change the yOffset of both the bags and bank frame.
*Add option to the Chat Module called "Sticky Chat", this option toggles whether or not opening up the chat edit box uses the last channel you spoke in.

[b]General Changes[/b]
*Update ElvUI for all languages.
*Weapon enchant Icons should appear with a purple border color.
*Running the SetCVar portion of the Install process will now lock your action bars and set a value of the key you need to use to drag your buttons around to the Shift Key. This is to prevent any users from having issues with dragging action buttons using the action button abilities.
*The In-Game config has received a bit of a overhaul to make finding stuff a little easier.
*The Bags module now has its own category inside the In-Game Configuration.
*Removed the experimental Profile Binds option. See: http://wow.curseforge.com/addons/elvui/tickets/258-improvements-to-profile-binds/#comments
*Add currency information to the bags data text tooltip.
*UIScale must be changed by at least 1% in order to receive a UIScale popup warning to reload.
*Chat Timestamps should now all have brackets around them, and be colored gray.
*Minimap Location text is now only displayed when moussing over the minimap.

[b]Fixes[/b]
*Fix issue with auto-accept invite only working one time.
*Fix aura icon position issues when you have three enchant icons shown. (Rogues)
*Fix a lua error seen on ragnaros encounter from the debuffs.
*Fix several cases where disabling the Power Bar would prevent the portrait frame from displaying next time you logged in. (Player Frame, Target Frame, Boss Frames)
*The Reputation bar should have its width correctly set on login.