@@ -38,6 +38,7 @@ L["Arena Frames"] = "Arena Frames"
 L["Are you sure you want to delete all your gray items?"] = "Are you sure you want to delete all your gray items?"
 L["Are you sure you want to disband the group?"] = "Are you sure you want to disband the group?"
 L["Are you sure you want to reset every mover back to it's default position?"] = "Are you sure you want to reset every mover back to it's default position?"
+L["Ascending"] = "Ascending"
 L["Assign profile to active talent specialization."] = "Assign profile to active talent specialization."
 L["Assist Frames"] = "Assist Frames"
 L["Attach To"] = "Attach To"
@@ -59,6 +60,7 @@ L["Bad"] = "Bad"
 L["Bad Color"] = "Bad Color"
 L["Bad Scale"] = "Bad Scale"
 L["Bad Transition Color"] = "Bad Transition Color"
+L["Bag-Bar"] = "Bag-Bar"
 L["Bag Columns"] = "Bag Columns"
 L["Bags"] = "Bags"
 L["BAGS_DESC"] = "Adjust bag settings for ElvUI."
@@ -178,6 +180,7 @@ L["Deleted %d gray items. Total Worth: %s"] = "Deleted %d gray items. Total Wort
 L["Delete Filter"] = "Delete Filter"
 L["Delete Grays"] = "Delete Grays"
 L["Delete Profile"] = "Delete Profile"
+L["Descending"] = "Descending"
 L["Direction the bag sorting will use to allocate the items."] = "Direction the bag sorting will use to allocate the items."
 L["Direction the health bar moves when gaining/losing health."] = "Direction the health bar moves when gaining/losing health."
 L["Disable Blizzard"] = "Disable Blizzard"
@@ -218,7 +221,9 @@ L["Embedded Addon"] = "Embedded Addon"
 L["Embedded Bar Height"] = "Embedded Bar Height"
 L["Empty Slot"] = "Empty Slot"
 L["Enable"] = "Enable"
+L["Enable Bag-Bar"] = "Enable Bag-Bar"
 L["Enable/Disable the all-in-one bag."] = "Enable/Disable the all-in-one bag."
+L["Enable/Disable the Bag-Bar."] = "Enable/Disable the Bag-Bar."
 L["Enable/Disable the loot frame."] = "Enable/Disable the loot frame."
 L["Enable/Disable the loot roll frame."] = "Enable/Disable the loot roll frame."
 L["Encounter Journal"] = "Encounter Journal"
@@ -511,6 +516,7 @@ L["Set the font size for everything in UI. Note: This doesn't effect somethings 
 L["Set the font size for unitframes."] = "Set the font size for unitframes."
 L["Set the font size of the action buttons."] = "Set the font size of the action buttons."
 L["Set the scale of the nameplate."] = "Set the scale of the nameplate."
+L["Set the size of your bag buttons."] = "Set the size of your bag buttons."
 L["Set the type of anchor mode the tooltip should use."] = "Set the type of anchor mode the tooltip should use."
 L["Setup Chat"] = "Setup Chat"
 L["Setup CVars"] = "Setup CVars"
@@ -537,6 +543,7 @@ L["Smart Raid Filter"] = "Smart Raid Filter"
 L["Smooth Bars"] = "Smooth Bars"
 L["Socket Frame"] = "Socket Frame"
 L["Sort Bags"] = "Sort Bags"
+L["Sort Direction"] = "Sort Direction"
 L["Sort Orientation"] = "Sort Orientation"
 L["Sort Special"] = "Sort Special"
 L["SP"] = "SP"
@@ -601,6 +608,8 @@ L["The amount of space (in pixels) between the columns."] = "The amount of space
 L["The anchor point for each new column. A value of LEFT will cause the columns to grow to the right."] = "The anchor point for each new column. A value of LEFT will cause the columns to grow to the right."
 L["The aura must be below this duration for the buff to show, set to 0 to disable. Note: This is in seconds."] = "The aura must be below this duration for the buff to show, set to 0 to disable. Note: This is in seconds."
 L["The chat windows function the same as Blizzard standard chat windows, you can right click the tabs and drag them around, rename, etc. Please click the button below to setup your chat windows."] = "The chat windows function the same as Blizzard standard chat windows, you can right click the tabs and drag them around, rename, etc. Please click the button below to setup your chat windows."
+L["The direction that the bag frames be (Horizontal or Vertical)."] = "The direction that the bag frames be (Horizontal or Vertical)."
+L["The direction that the bag frames will grow from the anchor."] = "The direction that the bag frames will grow from the anchor."
 L["The first button anchors itself to this point on the bar."] = "The first button anchors itself to this point on the bar."
 L["The following macro must be true in order for the group to be shown, in addition to any filter that may already be set."] = "The following macro must be true in order for the group to be shown, in addition to any filter that may already be set."
 L["The font that combat text will use. |cffFF0000WARNING: This requires a game restart or re-log for this change to take effect.|r"] = "The font that combat text will use. |cffFF0000WARNING: This requires a game restart or re-log for this change to take effect.|r"
